Rails 6.0.0rc1 try 033
[close #33907] Error when using "recyclable" cache keys with a store
that does not support it

https://github.com/rails/rails/pull/33932

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
+  memcached:
+    image: memcached:1.5.16-alpine
+
 
 volumes:
   pgsqldb:
