--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "core-js": "3",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "turbolinks": "^5.2.0"
