--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,13 @@ services:
       - POSTGRES_PASSWORD
       - "SELENIUM_DRIVER_URL=http://selenium_chrome:4444/wd/hub"
   selenium_chrome:
-    image: selenium/standalone-chrome-debug
-    logging:
-      driver: none
+    # image: selenium/standalone-chrome-debug
+    image: selenium/standalone-chrome
+    ports:
+      - "4444:4444"
+      - "5900:5900"
+    # logging:
+    #   driver: none
   db:
     image: postgres:10.7-alpine
     volumes:
