--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
-  db:
+  postgres:
     image: postgres:10.7-alpine
     volumes:
       - pgsqldb:/var/lib/postgresql/data
@@ -20,8 +20,18 @@ services:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
 
+  mysql:
+    image: mysql:8.0.17
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - mysqldb:/var/lib/mysql
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+
 volumes:
   pgsqldb:
+    driver: local
+  mysqldb:
     driver: local
   bundle:
     driver: local
