--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,13 @@ default: &default
   password: <%= ENV.fetch("POSTGRES_PASSWORD") %>
 
 development:
-  <<: *default
-  database: app_development
+  backbone:
+    <<: *default
+    database: backbone_development
+  library:
+    <<: *default
+    database: library_development
+    migrations_paths: db/library_migrate
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
