--- a/config/database.yml
+++ b/config/database.yml
@@ -1,31 +1,21 @@
-# PostgreSQL. Versions 9.3 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On macOS with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On macOS with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
-default: &default
+mysql: &mysql
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password:
+  host: db_mysql
+
+postgresql: &postgresql
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: db
+  host: db_postgresql
   user: <%= ENV.fetch("POSTGRES_USER") %>
   password: <%= ENV.fetch("POSTGRES_PASSWORD") %>
 
 development:
-  <<: *default
+  <<: *<%= ENV.fetch("DB") { 'postgresql' } %>
   database: app_development
 
   # The specified database role being used to connect to postgres.
@@ -59,7 +49,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *<%= ENV.fetch("DB") { 'postgresql' } %>
   database: app_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -82,7 +72,7 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  <<: *<%= ENV.fetch("DB") { 'postgresql' } %>
   database: app_production
   username: app
   password: <%= ENV['APP_DATABASE_PASSWORD'] %>
