--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,25 @@ services:
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
-  db:
+  db_postgresql:
     image: postgres:12.0-alpine
     volumes:
       - pgsqldb:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
+  db_mysql:
+    image: mysql:8.0.16
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - mysqldb:/var/lib/mysql
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
 
 volumes:
   pgsqldb:
+    driver: local
+  mysqldb:
     driver: local
   bundle:
     driver: local
