--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
-      - bundle:/usr/local/bundle
+      - bundle_rails5.0.0mysql5.7:/usr/local/bundle
     tty: true
   db:
     image: mysql:5.7.36
@@ -19,5 +19,5 @@ services:
 volumes:
   mysqldb:
     driver: local
-  bundle:
+  bundle_rails5.0.0mysql5.7:
     driver: local
