--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore pidfiles, but keep the directory.
+/tmp/pids/*
+!/tmp/pids/
+!/tmp/pids/.keep
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
@@ -29,4 +34,3 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
-/app/assets/builds
