--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,15 @@ services:
       - bundle:/usr/local/bundle
     tty: true
     environment:
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
+      - POSTGRES_USER: "${POSTGRES_USER}"
+      - POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
   db:
     image: postgres:15.2-alpine
     volumes:
       - pgsqldb15.2:/var/lib/postgresql/data
     environment:
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
+      - POSTGRES_USER: "${POSTGRES_USER}"
+      - POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
 
 volumes:
   pgsqldb15.2:
